[package]
name = "caklimas-rust-gameboy"
version = "0.6.0"
authors = ["caklimas <caklimas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitfield = "0.14.0"
# ggez = "0.5.1"
serde = { version = "1.0.140", features = ["derive", "rc"] }
serde-big-array = "0.4.1"
serde_json = "1.0.82"
wasm-bindgen = "0.2.81"
wee_alloc = "0.4.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]