[package]
name = "caklimas-rust-gameboy"
version = "0.6.1"
authors = ["caklimas <caklimas@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bitfield = "0.14.0"
ggez = "0.8.1"
serde = { version = "1.0.160", features = ["derive", "rc"] }
serde-big-array = "0.5.1"
serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
wee_alloc = "0.4.5"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]